--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "10.2.5",
-    "browser-sync": "2.26.14",
+    "browser-sync": "^2.29.3",
     "gulp": "4.0.2",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.0",
@@ -38,5 +38,8 @@
   ],
   "engines": {
     "node": "^12 || ^14"
+  },
+  "dependencies": {
+    "browser-sync-client": "^2.29.3"
   }
 }
